<resources>
    <string name="app_name">Alyssa</string>
    <string name="btn_new_category_name">New Category</string>
    <string name="btn_new_word_name">New word</string>
    <string name="btn_clear_name">Clear</string>
    <string name="btn_play_name">Play</string>
    <string name="btn_back_name">Back</string>
    <string name="btn_change_image">New image</string>
    <string name="txt_enter_string">Enter word</string>
    <string name="txt_enter_tags">Enter tags (separate with a comma)</string>
    <string name="btn_delete">Delete</string>
    <string name="image">Image</string>
</resources>
